@@ -326,6 +326,7 @@ and exiting by entering > by itself.
 RESET_ROOM=RESET
 RESET_AREA=RESET
 RESET_REJUV=RESET
+RESET_RELEVEL=RESET
 RESET_MOBSTATS=RESET
 RESET_ITEMSTATS=RESET
 RESET_PASSWORD=RESET
@@ -337,6 +338,7 @@ Usage    : RESET MOBSTATS ROOM/AREA/WORLD/CATALOG (NOSAVE) ([AREANAME])\n\r\
 Usage    : RESET ITEMSTATS ROOM/AREA/WORLD/CATALOG (NOSAVE) ([AREANAME])\n\r\
 Usage    : RESET INIFILE\n\r\
 Usage    : RESET PASSWORD [NAME]\n\r\
+Usage    : RESET RELEVEL\n\r\
 Example  : reset room\n\r\
 Example  : reset area\n\r\
 Example  : reset rejuv area items\n\r\
@@ -365,6 +367,11 @@ allow a "preview" of changes to be made by specifying the "nosave" \
 parameter on the command line, which prevents permanent changes.  \
 Area names may also be specified on the command line to cause the \
 command to skip certain areas (for use with WORLD parameter only).\n\r\
+\n\r\
+Reset relevel is a dangerous but potentially time saving command to \
+change the levels of all mobs and items in the same area as the user from \
+falling within its current range of levels to a new range.  See help \
+[areaname] to see the existing minimum and maximum levels of the area. \
 \n\r\
 The reset password command will let you generate a random password \
 for the given player or account and email it to their address on file, \
